--- a/hclwebapp-master/index.html
+++ b/hclwebapp-master/index.html
@@ -26,7 +26,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>HCL
         <li><a href="#">Link</a></li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -66,7 +66,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center"><img src="images/CT_Logo_Final-2.png" width="150" height="100"/>Welcome to HCL</h1>
+      <h1 class="text-center"><img src="images/CT_Logo_Final-2.png" width="150" height="100"/>Welcome to HCL DeMO</h1>
     </div>
   </div>
   <hr>
